# langchain_ice_breaker

./: .gitignore  LICENSE
backend/: pyproject.toml
backend/app/: main.py
backend/app/integrations/: linkedin.py
backend/app/schemas/: user.py
backend/src/: config.py
backend/src/integrations/: twitter.py
backend/src/schemas/: __init__.py  schemas.py
backend/src/services/: llm_service.py  tools.py
backend/src/services/agents/: linkedin_lookup_agent.py  twitter_lookup_agent.py
backend/src/utils/: __init__.py  output_parsers.py
