[tool.poetry]
name = "llm-langchain"
version = "0.1.0"
description = ""
authors = ["Bassem Karoui <bassem.karoui1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.8"
langchain-openai = "^0.2.9"
langchain-community = "^0.3.8"
langchainhub = "^0.1.21"
langchain-ollama = "^0.2.0"
tweepy = "^4.14.0"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
slowapi = "^0.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
